--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -14,7 +14,7 @@ jobs:
   call-build:
     name: "Build"
     # needs: call-lint
-    uses: cheqd/cheqd-node/.github/workflows/build.yml@main
+    uses: cheqd/cheqd-node/.github/workflows/build.yml
   
   # call-test:
   #   name: "Test"
