--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -16,12 +16,12 @@ jobs:
     # needs: call-lint
     uses: cheqd/cheqd-node/.github/workflows/build.yml@DEV-1278
   
-  call-test:
-    name: "Test"
-    needs: call-build
-    uses: cheqd/cheqd-node/.github/workflows/test.yml@DEV-1278
-    with:
-      VERSION: ${{ needs.call-build.outputs.VERSION }}
+  # call-test:
+  #   name: "Test"
+  #   needs: call-build
+  #   uses: cheqd/cheqd-node/.github/workflows/test.yml@DEV-1278
+  #   with:
+  #     VERSION: ${{ needs.call-build.outputs.VERSION }}
 
   # call-release:
   #   name: "Release"
